tests/fixtures/errors/missing_return.gbl
import io;

func bad(): int {
    io.println("missing return");
    // error: function must return a value
}

func main() {
    0
}
